--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -5,6 +5,10 @@ WORKDIR /rocker-build/
 # Install apt-getable packages to start
 RUN apt-get update && apt-get install -y --no-install-recommends apt-utils dialog
 
+# These packages are dependencies
+RUN apt-get install -y --no-install-recommends \
+    libxt6
+
 # Add curl, bzip2
 RUN apt-get update -qq && apt-get -y --no-install-recommends install \
     bzip2 \
