Add leanpubr to Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -20,6 +20,7 @@ RUN apt-get update -qq && apt-get -y --no-install-recommends install \
 RUN Rscript -e  "install.packages( \
     c('bookdown', \
       'here', \
+      'leanpubr', \
       'optparse', \
       'R.utils', \
       'rprojroot', \
