--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -24,6 +24,7 @@ RUN Rscript -e  "install.packages( \
       'optparse', \
       'R.utils', \
       'rprojroot', \
+      'servr', \
       'spelling', \
       'styler'))"
 
