--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Check URLs
         uses: paramt/url-checker@master
         with:
-          files: "README.md,CONTRIBUTING.md"
+          files: "README.md,CONTRIBUTING.md, *Rmd"
