I meant echo but put cat

--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -18,7 +18,7 @@ jobs:
         run: |
           rmd_files=$(find . -type f -name '*.Rmd')
           echo "::set-output name=rmd_files::$rmd_files"
-          cat rmd_files
+          echo $rmd_files
 
       - name: Check URLs
         uses: paramt/url-checker@master
