--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -23,4 +23,4 @@ jobs:
       - name: Check URLs
         uses: paramt/url-checker@master
         with:
-          files: "README.md,CONTRIBUTING.md, steps.get_rmds.outputs.rmd_files"
+          files: "README.md,CONTRIBUTING.md, ${{ steps.get_rmds.outputs.rmd_files }}"
