--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -18,12 +18,14 @@ jobs:
         run: |
           rmd_files=$(find . -type f -name '*.Rmd' -exec basename {} \;)
           rmd_files=$(echo "$rmd_files" | xargs | sed -e 's/ /,/g')
-          file_list="README.md,CONTRIBUTING.md,${rmd_files}"
+          file_list="README.md,CONTRIBUTING.md,${rmd_files[@]}"
           echo "::set-output name=all_files::$file_list"
           echo $file_list
 
+      - name: Test what this looks like
+        run: echo ${{ steps.get_rmds.outputs.all_files }}
+        
       - name: Check URLs
         uses: paramt/url-checker@master
         with:
-          files: "02-chapter_of_course.Rmd"
-          #files: "${{ steps.get_rmds.outputs.all_files }}"
+          files: "${{ steps.get_rmds.outputs.all_files }}"
