--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -29,6 +29,7 @@ jobs:
 
   do_checking:
     runs-on: ubuntu-latest
+    needs: [get_files]
     steps:
       - name: Check URLs
         uses: paramt/url-checker@master
