--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -12,8 +12,12 @@ on:
 jobs:
   check_urls:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
+        # What branch to commit to: the one from the pull request
+        with:
+          ref: ${{ github.event.pull_request.head.ref }}
 
       - name: Get Rmd file names
         id: get_rmds
@@ -25,6 +29,6 @@ jobs:
           echo $file_list
 
       - name: Check URLs
-      - uses: paramt/url-checker@master
+        uses: paramt/url-checker@master
         with:
           files: "${{ steps.get_rmds.outputs.all_files }}"
