Fix URLs and add to CONTRIBUTING.md

--- a/.github/workflows/url-checker.yml
+++ b/.github/workflows/url-checker.yml
@@ -24,7 +24,7 @@ jobs:
         run: |
           rmd_files=$(find . -type f -name '*.Rmd' -exec basename {} \;)
           rmd_files=$(echo "$rmd_files" | xargs | sed -e 's/ /,/g')
-          file_list="README.md,CONTRIBUTING.md,${rmd_files[@]}"
+          file_list="README.md,${rmd_files[@]}"
           echo "::set-output name=all_files::$file_list"
           echo $file_list
 
