Revert "Get New Course issues set up "
This reverts commit d7736388794115ff22a70f9999547b46431a9594.

--- a/.github/workflows/issue-filer.yml
+++ b/.github/workflows/issue-filer.yml
@@ -1,11 +1,11 @@
 # .github/workflows/issue-on-push.yml
 
-name: Issue Filer
+name: Manually triggered workflow
 on:
   workflow_dispatch:
 
 jobs:
-  issue-filer:
+  stuff:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
