--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -4,6 +4,7 @@ repo: https://github.com/jhudsl/ITCR_Course_Template/
 rmd_files: ["index.Rmd",
             "01-intro.Rmd",
             "02-chapter_of_course.Rmd",
+            "03-test_cases.Rmd",
             "About.Rmd"]
 new_session: yes
 delete_merged_file: true
