--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           repository: jhudsl/ITCR_Course_Template_Leanpub
-          token: ${{ secrets.TOKEN }}
+          token: ${{ secrets.GIT_TOKEN }}
 
       - name: Get docs/ from Bookdown repo
         shell: bash
@@ -60,7 +60,7 @@ jobs:
         uses: peter-evans/create-pull-request@v3
         id: cpr
         with:
-          token: ${{ secrets.TOKEN }}
+          token: ${{ secrets.GIT_TOKEN }}
           commit-message: Copy docs/ files from Bookdown repository
           signoff: false
           branch: auto_copy_rendered_files
