Switch so git repo doesn't need to be specified

--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -39,7 +39,7 @@ jobs:
           rmdir docs
 
           # Get list of files
-          svn export https://github.com/jhudsl/ITCR_Course_Template_Bookdown.git/branches/${GITHUB_REF}/docs
+          svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF}/docs
 
       - name: Create PR with rendered docs files
         uses: peter-evans/create-pull-request@v3
