Make minor changes to intro for this test

--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -12,8 +12,8 @@ on:
   push:
     branches: [ master, cansavvy/transfer-docs-gha]
     # trigger on changes to exercise notebooks, but not `solved` notebooks
-    #paths:
-    # - 'docs/*'
+    paths:
+     - 'docs/*'
 
 jobs:
   file-bookdown-pr:
