--- a/.github/workflows/issue-filer.yml
+++ b/.github/workflows/issue-filer.yml
@@ -9,19 +9,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      
+
       # Issue for what repository settings need to be set
-      - name: New Course: Set Repository Settings
+      - name: New Course - Set Repository Settings
         uses: peter-evans/create-issue-from-file@v2.3.2
         with:
-          title: New Course: Set Repository Settings
+          title: New Course - Set Repository Settings
           content-filepath: .github/automatic-issues/set-repo-settings.md
           labels: automated training issue
 
       # Issue for what needs to be edited
-      - name: New Course: Templates to Edit
+      - name: New Course - Templates to Edit
         uses: peter-evans/create-issue-from-file@v2.3.2
         with:
-          title: New Course: Templates to Edit
+          title: New Course - Templates to Edit
           content-filepath: .github/automatic-issues/templates-to-edit.md
           labels: automated training issue
