--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -58,6 +58,15 @@ jobs:
           jhudsl/itcr_course_template \
           Rscript -e "bookdown::render_book('index.Rmd')"
 
+      # Refresh google slide code images
+      - name: Run google slide refresh script
+        run: |
+        Rscript scripts/slides_image_linker.R \
+          --slides_id "1NS9yMPUolVyBIizb7DNxGBb0P-tR7DdThCBqCcPdltY"
+          --image_loc "_bookdown_files" \
+          --image_key_dir "resources" \
+          --git_repo ${{github.repository}}
+
       # Push the Docker image
       - name: Push Docker image
         run: docker push jhudsl/itcr_course_template
