--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -65,7 +65,8 @@ jobs:
           --slides_id "1NS9yMPUolVyBIizb7DNxGBb0P-tR7DdThCBqCcPdltY"
           --image_loc "_bookdown_files" \
           --image_key_dir "resources" \
-          --git_repo ${{github.repository}}
+          --git_repo ${{GITHUB_REPOSITORY}}
+          --git_branch ${GITHUB_REF#refs/heads/}
 
       # Push the Docker image
       - name: Push Docker image
