--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,7 @@ RUN apt-get install -y --no-install-recommends \
 # Add curl, bzip2
 RUN apt-get update -qq && apt-get -y --no-install-recommends install \
     bzip2 \
-    curl 
+    curl
 
 # Install pip3 and installation tools
 RUN apt-get -y --no-install-recommends install \
@@ -28,6 +28,7 @@ RUN Rscript -e  "install.packages( \
       'optparse', \
       'R.utils', \
       'rprojroot', \
+      'rgoogleslides', \
       'servr', \
       'spelling', \
       'styler'))"
