Add instructions about setting up github secrets

--- a/.github/workflows/issue-filer.yml
+++ b/.github/workflows/issue-filer.yml
@@ -25,3 +25,11 @@ jobs:
           title: New Course - Templates to Edit
           content-filepath: .github/automatic-issues/templates-to-edit.md
           labels: automated training issue
+
+      # Issue for what github secrets that need to be set
+      - name: New Course - Set Github Secrets
+        uses: peter-evans/create-issue-from-file@v2.3.2
+        with:
+          title: New Course - Set Github Secrets
+          content-filepath: .github/automatic-issues/git-secrets.md
+          labels: automated training issue
