--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -62,11 +62,11 @@ jobs:
       - name: Run google slide refresh script
         run: |
         Rscript scripts/slides_image_linker.R \
-          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }}
+          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
           --image_loc "_bookdown_files" \
           --image_key_dir "resources" \
-          --git_repo ${GITHUB_REPOSITORY}
-          --git_branch ${GITHUB_REF#refs/heads/}
+          --git_repo ${GITHUB_REPOSITORY} \
+          --git_branch ${GITHUB_REF#refs/heads/} 
 
       # Push the Docker image
       - name: Push Docker image
