--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -38,8 +38,11 @@ jobs:
           # remove old docs/ files and folder
           rm -r docs
 
-          # Get list of files
+          # Copy over files in docs
           svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/docs
+
+          # Copy over any .bib files too!
+          svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/*.bib
 
       - name: Create PR with rendered docs files
         uses: peter-evans/create-pull-request@v3
