--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -61,12 +61,18 @@ jobs:
       # Refresh google slide code images
       - name: Run google slide refresh script
         run: |
-        Rscript scripts/slides_image_linker.R \
+        Rscript scripts/google_slides_image_linker.R \
           --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
           --image_loc "_bookdown_files" \
           --image_key_dir "resources" \
           --git_repo ${{ secrets.GITHUB_REPOSITORY}} \
-          --git_branch ${{ secrets.GITHUB_REF#refs/heads/}} 
+          --git_branch ${{ secrets.GITHUB_REF#refs/heads/}}
+
+      # Refresh google slide code images
+      - name: Download slides
+        run: |
+        Rscript scripts/google_slide_png_downloader.R \
+          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }}
 
       # Push the Docker image
       - name: Push Docker image
