--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -66,13 +66,15 @@ jobs:
           --image_loc "_bookdown_files" \
           --image_key_dir "resources" \
           --git_repo ${{ secrets.GITHUB_REPOSITORY}} \
-          --git_branch ${{ secrets.GITHUB_REF#refs/heads/}}
+          --git_branch ${{ secrets.GITHUB_REF#refs/heads/}} \
+          --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
 
       # Refresh google slide code images
       - name: Download slides
         run: |
         Rscript scripts/google_slide_png_downloader.R \
-          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }}
+          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
+          --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
 
       # Push the Docker image
       - name: Push Docker image
