--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -65,8 +65,8 @@ jobs:
           --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
           --image_loc "_bookdown_files" \
           --image_key_dir "resources" \
-          --git_repo ${{ secrets.GITHUB_REPOSITORY}} \
-          --git_branch ${{ secrets.GITHUB_REF#refs/heads/}} \
+          --git_repo ${ GITHUB_REPOSITORY } \
+          --git_branch ${ GITHUB_REF#refs/heads/ } \
           --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
 
       # Refresh google slide code images
