--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -34,7 +34,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       # Set up Docker build
       - name: Set up Docker Build
@@ -57,6 +57,24 @@ jobs:
           --mount type=bind,target=/home/rstudio,source=$PWD \
           jhudsl/itcr_course_template \
           Rscript -e "bookdown::render_book('index.Rmd')"
+
+      # Refresh google slide code images
+      - name: Run google slide refresh script
+        run: |
+        Rscript scripts/google_slides_image_linker.R \
+          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
+          --image_loc "_bookdown_files" \
+          --image_key_dir "resources" \
+          --git_repo ${ GITHUB_REPOSITORY } \
+          --git_branch ${ GITHUB_REF#refs/heads/ } \
+          --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
+
+      # Refresh google slide code images
+      - name: Download slides
+        run: |
+        Rscript scripts/google_slide_png_downloader.R \
+          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
+          --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
 
       # Push the Docker image
       - name: Push Docker image
