Have transfer-rendered.yml also transfer .bib files too (#76)
* Try doing svn export for .bib files too

* Individually reference the .bib files

--- a/.github/workflows/transfer-rendered-files.yml
+++ b/.github/workflows/transfer-rendered-files.yml
@@ -38,9 +38,13 @@ jobs:
           # remove old docs/ files and folder
           rm -r docs
 
-          # Get list of files
+          # Copy over files in docs
           svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/docs
 
+          # Copy over any .bib files too!
+          svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/book.bib
+          svn export https://github.com/${GITHUB_REPOSITORY}.git/branches/${GITHUB_REF#refs/heads/}/packages.bib
+                    
       - name: Create PR with rendered docs files
         uses: peter-evans/create-pull-request@v3
         id: cpr
