--- a/_output.yml
+++ b/_output.yml
@@ -7,6 +7,6 @@ bookdown::gitbook:
     toc:
       collapse: section
       before: |
-       <a href="https://www.itcrtraining.org/"><img src="resources/images/logo.png" style="padding-left: 15px; padding-top: 8px;"/></a>
+       <a href="https://www.itcrtraining.org/"><img src="https://raw.githubusercontent.com/jhudsl/DaSL_Course_Template_Bookdown/main/resources/images/logo.png" style="padding-top: 8px; padding-left: 8px; padding-right: 15px"/></a>
       after: |
-       <p style="text-align:center;"> <a href="https://github.com/jhudsl/ITCR_Course_Template_Bookdown" target="blank" > Content published with</a> <a href="https://bookdown.org/" target="blank"> bookdown</a> </p>
+       <p style="text-align:center;"> <a href="https://github.com/jhudsl/DaSL_Course_Template_Bookdown" target="blank" > Content published with</a> <a href="https://bookdown.org/" target="blank"> bookdown</a> </p>
