--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -72,11 +72,11 @@ jobs:
 #          --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
 
       # Refresh google slide code images
-      - name: Download slides
-        run: |
-        Rscript scripts/google_slide_png_downloader.R \
-          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
-          --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
+#      - name: Download slides
+#        run: |
+#        Rscript scripts/google_slide_png_downloader.R \
+#          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
+#          --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
 
       # Push the Docker image
       - name: Push Docker image
