--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -66,13 +66,13 @@ jobs:
           docker run \
           --mount type=bind,target=/home/rstudio,source=$PWD \
           jhudsl/itcr_course_template \
-          "Rscript scripts/google_slides_image_linker.R \
+          "Rscript -e 'scripts/google_slides_image_linker.R \
             --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
-            --image_loc '_bookdown_files' \
-            --image_key_dir 'resources' \
+            --image_loc _bookdown_files \
+            --image_key_dir resources \
             --git_repo ${ GITHUB_REPOSITORY } \
             --git_branch ${ GITHUB_REF#refs/heads/ } \
-            --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}"
+            --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}'"
 
       # Refresh google slide code images
       - name: Download slides
@@ -80,9 +80,9 @@ jobs:
           docker run \
           --mount type=bind,target=/home/rstudio,source=$PWD \
           jhudsl/itcr_course_template \
-          "Rscript -e scripts/google_slide_png_downloader.R \
+          "Rscript -e 'scripts/google_slide_png_downloader.R \
             --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
-            --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}"
+            --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}'"
 
       # Push the Docker image
       - name: Push Docker image
