--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -12,8 +12,6 @@ name: Build, Render, and Push
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
   # This workflow contains a single job called "build-all"
@@ -30,7 +28,7 @@ jobs:
           fetch-depth: 0
           # use github PAT
           token: ${{ secrets.GITHUB_TOKEN }}
-          
+
       - name: test keys
         run: |
           echo ${{ secrets.GOOGLE_SLIDE_ID }}
@@ -55,14 +53,14 @@ jobs:
           load: true
           context: docker
           file: docker/Dockerfile
-          tags: jhudsl/itcr_course_template
+          tags: jhudsl/course_template
 
       # Run bookdown rendering
       - name: Run bookdown render
         run: |
           docker run \
           --mount type=bind,target=/home/rstudio,source=$PWD \
-          jhudsl/itcr_course_template \
+          jhudsl/course_template \
           Rscript -e "bookdown::render_book('index.Rmd')"
 
       # Refresh google slide code images
@@ -70,7 +68,7 @@ jobs:
         run: |
           docker run \
           --mount type=bind,target=/home/rstudio,source=$PWD \
-          jhudsl/itcr_course_template \
+          jhudsl/course_template \
           "Rscript --vanilla scripts/google_slides_image_linker.R \
             --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
             --image_loc _bookdown_files \
@@ -91,7 +89,7 @@ jobs:
 
       # Push the Docker image
       - name: Push Docker image
-        run: docker push jhudsl/itcr_course_template
+        run: docker push jhudsl/course_template
 
       - name: Commit rendered bookdown files
         run: |
