--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -29,6 +29,11 @@ jobs:
           # use github PAT
           token: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: test keys
+        run: |
+          echo ${{ secrets.GOOGLE_SLIDE_ID }}
+          echo ${GITHUB_REPOSITORY}
+
       # Login to Dockerhub
       - name: Login to DockerHub
         uses: docker/login-action@v1
@@ -48,37 +53,43 @@ jobs:
           load: true
           context: docker
           file: docker/Dockerfile
-          tags: jhudsl/itcr_course_template
+          tags: jhudsl/course_template
 
       # Run bookdown rendering
       - name: Run bookdown render
         run: |
           docker run \
           --mount type=bind,target=/home/rstudio,source=$PWD \
-          jhudsl/itcr_course_template \
+          jhudsl/course_template \
           Rscript -e "bookdown::render_book('index.Rmd')"
 
       # Refresh google slide code images
       - name: Run google slide refresh script
         run: |
-        Rscript scripts/google_slides_image_linker.R \
-          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
-          --image_loc "_bookdown_files" \
-          --image_key_dir "resources" \
-          --git_repo ${ GITHUB_REPOSITORY } \
-          --git_branch ${ GITHUB_REF#refs/heads/ } \
-          --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
+          docker run \
+          --mount type=bind,target=/home/rstudio,source=$PWD \
+          jhudsl/course_template \
+          "Rscript --vanilla scripts/google_slides_image_linker.R \
+            --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
+            --image_loc _bookdown_files \
+            --image_key_dir resources \
+            --git_repo ${GITHUB_REPOSITORY} \
+            --git_branch ${GITHUB_REF#refs/heads/} \
+            --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}"
 
       # Refresh google slide code images
       - name: Download slides
         run: |
-        Rscript scripts/google_slide_png_downloader.R \
-          --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
-          --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
+          docker run \
+          --mount type=bind,target=/home/rstudio,source=$PWD \
+          jhudsl/itcr_course_template \
+          "Rscript --vanilla scripts/google_slide_png_downloader.R \
+            --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
+            --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}"
 
       # Push the Docker image
       - name: Push Docker image
-        run: docker push jhudsl/itcr_course_template
+        run: docker push jhudsl/course_template
 
       - name: Commit rendered bookdown files
         run: |
