--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -5,6 +5,7 @@ rmd_files: ["index.Rmd",
             "01-intro.Rmd",
             "02-chapter_of_course.Rmd",
             "03-test_cases.Rmd",
+            "04-figures.Rmd",
             "About.Rmd"]
 new_session: yes
 delete_merged_file: true
