--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -1,4 +1,4 @@
-# This code was originally written by Josh Shapiro 
+# This code was originally written by Josh Shapiro
 # for the Childhood Cancer Data Lab, an initiative of Alexs Lemonade Stand Foundation.
 # https://github.com/AlexsLemonade/refinebio-examples/blob/33cdeff66d57f9fe8ee4fcb5156aea4ac2dce07f/.github/workflows/style-and-sp-check.yml#L1
 
@@ -45,6 +45,6 @@ jobs:
           push: false
           context: docker
           file: docker/Dockerfile
-          tags: ccdl/refinebio-examples:latest
+          tags: jhudsl/course_template:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
