--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,6 +1,6 @@
-book_filename: "ITCR_Course_Name"
+book_filename: "Course_Name"
 chapter_name: "Chapter "
-repo: https://github.com/jhudsl/ITCR_Course_Template/
+repo: https://github.com/jhudsl/DaSL_Course_Template_Bookdown/
 rmd_files: ["index.Rmd",
             "01-intro.Rmd",
             "02-chapter_of_course.Rmd",
