Temporarily comment out install_github so things will work

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -39,9 +39,9 @@ RUN Rscript -e  "install.packages( \
       'styler'))"
 
 # Install packages from github
-RUN Rscript --vanilla install_github.R \
-  --packages "jhudsl/didactr, jhudsl/leanbuild" \
-  --token ${GITHUB_TOKEN}
+#RUN Rscript --vanilla install_github.R \
+#  --packages "jhudsl/didactr, jhudsl/leanbuild" \
+#  --token ${GITHUB_TOKEN}
 
 # set final workdir for commands
 WORKDIR /home/rstudio
