--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,7 +2,6 @@ FROM rocker/tidyverse:4.0.2
 LABEL maintainer="cansav09@gmail.com"
 WORKDIR /rocker-build/
 
-ARG ${GITHUB_TOKEN}
 COPY install_github.R .
 
 # Install apt-getable packages to start
@@ -39,9 +38,9 @@ RUN Rscript -e  "install.packages( \
       'styler'))"
 
 # Install packages from github
-#RUN Rscript --vanilla install_github.R \
-#  --packages "jhudsl/didactr, jhudsl/leanbuild" \
-#  --token ${GITHUB_TOKEN}
+RUN Rscript --vanilla install_github.R \
+  --packages "jhudsl/didactr, jhudsl/leanbuild" \
+  --token ${GIT_TOKEN}
 
 # set final workdir for commands
 WORKDIR /home/rstudio
