Add Refresh token for google slides bit

--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -48,4 +48,4 @@ jobs:
           tags: jhudsl/course_template:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-          secrets: GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+          secrets: GIT_TOKEN=${{ secrets.GIT_TOKEN }}
