--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -41,11 +41,6 @@ jobs:
       # Build docker image
       - name: Build Docker image
         uses: docker/build-push-action@v2
-        with:
-          push: false
-          context: docker
-          file: docker/Dockerfile
-          tags: jhudsl/course_template:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
-          secrets: GIT_TOKEN=${{ secrets.GIT_TOKEN }}
+        run: |
+        echo ${{ secrets.GIT_TOKEN }} > git_token.txt
+        docker build docker/Dockerfile -t jhudsl/course_template
