--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -42,4 +42,4 @@ jobs:
       - name: Build Docker image
         run: |
           echo ${{ secrets.GIT_TOKEN }} > git_token.txt
-          docker build docker/Dockerfile -t jhudsl/course_template
+          docker build -< docker/Dockerfile -t jhudsl/course_template
