Add guidance about images (#87)
* Add guidance about images

* Doctoc and add to dockerfile

* Add knitr chunk bit

* Use littler installGithub.r

* return tidyverse to 4.0.2

* Trying something with a separate script

* Add script that I mean to add

* Add docker secrets

* Get rid of ITCR mentions

* Alter instruction about install_github packages

* try with ARG

* Temporarily comment out install_github so things will work

* Get rid of ARG and change name of GIT_TOKEN

* Add Refresh token for google slides bit

* Let's see if this strategy works!

* Drop uses argument

* Fix spacing

* Fix command

* Fix file paths

* Try alternate build call

* So close. Just failed on clean up stage.

--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -1,4 +1,4 @@
-# This code was originally written by Josh Shapiro 
+# This code was originally written by Josh Shapiro
 # for the Childhood Cancer Data Lab, an initiative of Alexs Lemonade Stand Foundation.
 # https://github.com/AlexsLemonade/refinebio-examples/blob/33cdeff66d57f9fe8ee4fcb5156aea4ac2dce07f/.github/workflows/style-and-sp-check.yml#L1
 
@@ -40,11 +40,9 @@ jobs:
 
       # Build docker image
       - name: Build Docker image
-        uses: docker/build-push-action@v2
-        with:
-          push: false
-          context: docker
-          file: docker/Dockerfile
-          tags: ccdl/refinebio-examples:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,dest=/tmp/.buildx-cache
+        run: |
+          echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
+          /usr/bin/docker buildx build --tag jhudsl/course_template:latest  \
+          --cache-from type=local,src=/tmp/.buildx-cache  \
+          --cache-to type=local,dest=/tmp/.buildx-cache \
+          --file docker/Dockerfile docker
