--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -27,7 +27,7 @@ jobs:
           # get the full repo
           fetch-depth: 0
           # use github PAT
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GIT_TOKEN }}
 
       - name: test keys
         run: |
@@ -54,6 +54,7 @@ jobs:
           context: docker
           file: docker/Dockerfile
           tags: jhudsl/course_template
+          secrets: GIT_TOKEN=${{ secrets.GIT_TOKEN }}
 
       # Run bookdown rendering
       - name: Run bookdown render
@@ -83,7 +84,8 @@ jobs:
             --image_key_dir resources \
             --git_repo ${GITHUB_REPOSITORY} \
             --git_branch ${GITHUB_REF#refs/heads/} \
-            --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
+            --access_token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
+            --refresh_token ${{ secrets.GOOGLE_SLIDE_REFRESH_TOKEN }}
 
       # Refresh google slide code images
       - name: Download slides
@@ -93,7 +95,8 @@ jobs:
           jhudsl/course_template \
           Rscript --vanilla scripts/google_slide_png_downloader.R \
             --slides_id ${{ secrets.GOOGLE_SLIDE_ID }} \
-            --token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
+            --access_token ${{ secrets.GOOGLE_SLIDE_TOKEN }}
+            --refresh_token ${{ secrets.GOOGLE_SLIDE_REFRESH_TOKEN }}
 
 
       # Commit the google slide images just downloaded
