Try not using buildx

--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Build Docker image
         run: |
           echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
-          /usr/bin/docker buildx build --tag jhudsl/course_template:latest  \
+          docker build --tag jhudsl/course_template:latest  \
           --cache-from type=local,src=/tmp/.buildx-cache  \
           --cache-to type=local,dest=/tmp/.buildx-cache \
           --file docker/Dockerfile docker
