try with buildx but in a different way

--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -41,5 +41,6 @@ jobs:
       # Build docker image
       - name: Build Docker image
         run: |
-          echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
-          docker build -< docker/Dockerfile -t jhudsl/course_template:latest 
+          cd docker
+          echo ${{ secrets.GIT_TOKEN }} > git_token.txt
+          docker buildx build . -t jhudsl/course_template:latest
