--- a/.github/workflows/render-bookdown.yml
+++ b/.github/workflows/render-bookdown.yml
@@ -48,8 +48,9 @@ jobs:
       # Build docker image
       - name: Build Docker image
         run: |
-          echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
-          docker build -< docker/Dockerfile -t jhudsl/course_template:latest 
+          cd docker
+          echo ${{ secrets.GIT_TOKEN }} > git_token.txt
+          docker buildx build . -t jhudsl/course_template:latest
 
       # Run bookdown rendering
       - name: Run bookdown render
