Try docker build instead of buildx (#93)
* Add guidance about images

* Doctoc and add to dockerfile

* Add knitr chunk bit

* Use littler installGithub.r

* return tidyverse to 4.0.2

* Trying something with a separate script

* Add script that I mean to add

* Add docker secrets

* Get rid of ITCR mentions

* Alter instruction about install_github packages

* try with ARG

* Temporarily comment out install_github so things will work

* Get rid of ARG and change name of GIT_TOKEN

* Add Refresh token for google slides bit

* Let's see if this strategy works!

* Drop uses argument

* Fix spacing

* Fix command

* Fix file paths

* Try alternate build call

* So close. Just failed on clean up stage.

* Forgot to copy over successful docker build command

* Try not using buildx

* Make minor change to dockerfile so the GHA is triggered

* Try --file instead

* One more edit

* Use -<

* try with buildx but in a different way

--- a/.github/workflows/docker-build-test.yml
+++ b/.github/workflows/docker-build-test.yml
@@ -41,8 +41,6 @@ jobs:
       # Build docker image
       - name: Build Docker image
         run: |
-          echo ${{ secrets.GIT_TOKEN }} > docker/git_token.txt
-          /usr/bin/docker buildx build --tag jhudsl/course_template:latest  \
-          --cache-from type=local,src=/tmp/.buildx-cache  \
-          --cache-to type=local,dest=/tmp/.buildx-cache \
-          --file docker/Dockerfile docker
+          cd docker
+          echo ${{ secrets.GIT_TOKEN }} > git_token.txt
+          docker buildx build . -t jhudsl/course_template:latest
